--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,12 +4,134 @@
 
 @layer base{
     /*les styles de base, ex : les styles de text...*/
+    body{
+        @apply box-border m-0 p-0 w-screen overflow-x-hidden;
+    }
+    .h1{
+        @apply font-saotorpes text-marine text-5xl my-6 laptop:text-7xl
+    }
+    .h2{
+        @apply font-secularone text-black text-4xl my-6
+    }
+    .h3{
+        @apply font-secularone text-black text-3xl my-6
+    }
+    .h4{
+        @apply font-secularone text-black text-2xl my-6
+    }
+    p, input, label, a{
+        @apply font-quicksand text-black text-lg font-medium mb-4
+    }
 }
 
 @layer components{
     /*les styles de composants réutilisés, ex : boutons, formulaires, slider...*/
+    .button{
+        @apply font-quicksand uppercase bg-red text-beige px-4 py-2 rounded-full my-2
+    }
+    .button_secondary{
+        @apply font-quicksand border-solid border-2 border-marine text-marine px-4 py-2 rounded-full my-2
+    }
+    .macaron{
+        background-image: url(../src/images/macaron.svg);
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        animation: spin 10s linear infinite;
+        scale: 1.5;
+        align-self: start;
+        margin: 0 1.25rem;
+    }
+
+    .grid_brand{
+        display: grid;
+        grid-template-rows: repeat(1, minmax(0, 1fr));
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    .brand_img{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_question{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_quote{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_pattern{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_value{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_anim{
+        grid-row: auto;
+        grid-column: auto;
+    }
+    .brand_macaron img{
+        animation: spin 10s linear infinite reverse;
+    }
+
+    @media screen and (min-width: 1024px) {
+        .grid_brand{
+            grid-template-rows: repeat(3, minmax(0, 1fr));
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+        }
+        .brand_img{
+            grid-row: 1/3;
+            grid-column: 1/3;
+        }
+        .brand_question{
+            grid-row: 1;
+            grid-column: 3;
+        }
+        .brand_quote{
+            grid-row: 2;
+            grid-column: 2;
+        }
+        .brand_pattern{
+            grid-row: 2;
+            grid-column: 3;
+        }
+        .brand_value{
+            grid-row: 3;
+            grid-column: 3;
+        }
+        .brand_anim{
+            grid-row: 3;
+            grid-column: 1/3;
+        }
+    }
+
+    @keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+    }
 }
 
 @layer utilities{
     /*les styles spécifiques pour un élément*/ 
+    @keyframes move-infinite {
+        0%{
+            transform: translateX(0);
+        }
+        100%{
+            transform: translateX(30.25%);
+        }
+    }
+
+    .animate-text-infinite{
+        animation: move-infinite 20s infinite linear;
+    }
+    .animate-text-infinite:nth-child(odd) {
+        animation: move-infinite 20s infinite linear reverse;
+    }
 }
