--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,10 +5,10 @@
 @layer base{
     /*les styles de base, ex : les styles de text...*/
     * {
-        @apply m-0 p-0 box-border;
+        @apply box-border;
     }
     body{
-        @apply w-screen overflow-x-hidden;
+        @apply w-screen box-border m-0 p-0 overflow-x-hidden;
     }
     .h1{
         @apply font-saotorpes text-marine text-5xl my-6 laptop:text-7xl
@@ -30,10 +30,16 @@
 @layer components{
 /*----- Boutons */
     .button{
-        @apply font-quicksand uppercase bg-red text-beige px-4 py-2 rounded-full my-2
+        @apply font-quicksand uppercase bg-red text-beige px-4 py-2 rounded-full my-2  flex justify-center items-center cursor-pointer
+    }
+    .button svg{
+        @apply ml-4 stroke-beige
     }
     .button_secondary{
-        @apply font-quicksand border-solid border-2 border-marine text-marine px-4 py-2 rounded-full my-2
+        @apply font-quicksand border-solid border-2 border-marine text-marine px-4 py-2 rounded-full my-2  flex justify-center items-center cursor-pointer
+    }
+    .button-secondary svg{
+        @apply ml-4 stroke-marine
     }
     
 /*----- Grille présentation de la marque */ 
@@ -102,9 +108,10 @@
 /*----- Macaron toutes nos lampes */ 
     .macaron{
         background-image: url(../src/images/macaron.svg);
+        background-repeat: no-repeat;
         width: 100px;
         height: 100px;
-        object-fit: contain;
+        object-fit: fill;
         animation: spin 10s linear infinite;
         scale: 1.5;
         align-self: start;
@@ -128,11 +135,13 @@
         width: 100vw;
         height: auto;
     }
-    /*.swiper-slide{
-        background-image: url(../src/images/product_card.svg);
-        object-fit: contain;
-        max-height: 400px;
-    }*/
+
+    body > main > div.products.flex.flex-col > div > div.swiper-pagination.w-1\/2.static.m-3.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal > span.swiper-pagination-bullet, 
+    body > main > div.products.flex.flex-col > div > div.swiper-pagination.w-1\/2.static.m-3.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal > span.swiper-pagination-bullet.swiper-pagination-bullet-active,
+    body > main > div.opinions > div > div > div.swiper-pagination.w-1\/2.static.m-3.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal > span.swiper-pagination-bullet, 
+    body > main > div.opinions > div > div > div.swiper-pagination.w-1\/2.static.m-3.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal > span.swiper-pagination-bullet.swiper-pagination-bullet-active{
+        @apply bg-marine;
+    }
 }
 
 @layer utilities{
