--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,6 +25,10 @@
     p, input, label, a{
         @apply font-quicksand text-black text-lg font-medium mb-4
     }
+    @media screen and (min-width: 1024px) {
+        label{
+            @apply mb-0
+        }
 }
 
 @layer components{
@@ -103,6 +107,12 @@
             grid-row: 3;
             grid-column: 1/3;
         }
+    }
+
+/*---- Grille espace compte laptop */ 
+    .account{
+        display: grid;
+        grid-template-columns: 1fr 1.25fr;
     }
 
 /*----- Macaron toutes nos lampes */ 
