--- a/src/css/main.css
+++ b/src/css/main.css
@@ -176,6 +176,16 @@
         @apply bg-marine;
     }
 
+    body > main > div > div.swiper.h-\[60vh\].relative.laptop\:w-11\/12.swiper-coverflow.swiper-3d.swiper-initialized.swiper-horizontal.swiper-ios.swiper-watch-progress > div.swiper-button-prev,
+    body > main > div > div.swiper.h-\[60vh\].relative.laptop\:w-11\/12.swiper-coverflow.swiper-3d.swiper-initialized.swiper-horizontal.swiper-ios.swiper-watch-progress > div.swiper-button-next{
+        @apply text-marine;
+    }
+
+    #swiper-wrapper-d15ade25d2dec71f > div.swiper-slide.text-center.h-full.w-screen.flex.flex-col.justify-between.laptop\:h-\[60vh\].laptop\:w-1\/3.swiper-slide-visible.swiper-slide-prev,
+    #swiper-wrapper-d15ade25d2dec71f > div.swiper-slide.text-center.h-full.w-screen.flex.flex-col.justify-between.laptop\:h-\[60vh\].laptop\:w-1\/3.swiper-slide-visible.swiper-slide-next{
+        @apply opacity-80;
+    }
+
 /*---- Cartes inspiration */
     .inspi_card{
         @apply grid grid-cols-1 gap-4 m-4 laptop:grid-cols-5 laptop:mx-20;
