--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1282,6 +1282,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
   margin-top: 3rem !important;
 }
 
+.mb-12 {
+  margin-bottom: 3rem !important;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem !important;
 }
@@ -1747,6 +1751,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 
 .pt-20 {
   padding-top: 5rem !important;
+}
+
+.pt-24 {
+  padding-top: 6rem !important;
 }
 
 .text-center {
