--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -506,7 +506,7 @@ body {
   }
 }
 
-p, input, label, a {
+p, input, label, a, textarea {
   margin-bottom: 1rem;
   font-family: Quicksand;
   font-size: 1rem;
@@ -517,7 +517,7 @@ p, input, label, a {
 }
 
 @media (min-width: 1024px) {
-  p, input, label, a {
+  p, input, label, a, textarea {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
