CiluzioView - Random - Totems - Custom step 1 - Non fonctionnel

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1580,6 +1580,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
   align-self: flex-end !important;
 }
 
+.self-start {
+  align-self: flex-start !important;
+}
+
 .self-center {
   align-self: center !important;
 }
