--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -923,7 +923,7 @@ body > main > div.products.button_secondary.flex-col > div > div.swiper-paginati
 /*----- Slider */
 
 .swiper {
-  width: 100vw;
+  width: 100%;
   height: auto;
 }
 
@@ -1077,7 +1077,7 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
   background-color: rgb(241 238 237 / var(--tw-bg-opacity));
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  opacity: 0.5;
+  opacity: 0.8;
   border-radius: 0 16px 16px 0;
 }
 
@@ -1126,6 +1126,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 
 .left-0 {
   left: 0px !important;
+}
+
+.left-1\/2 {
+  left: 50%!important;
 }
 
 .bottom-0 {
@@ -1202,6 +1206,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 
 .bottom-60 {
   bottom: 15rem !important;
+}
+
+.z-0 {
+  z-index: 0 !important;
 }
 
 .z-50 {
@@ -1401,6 +1409,9 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 .h-\[85vh\] {
   height: 85vh !important;
 }
+.h-\[50vh\] {
+  height: 50vh!important;
+}
 
 .h-fit {
   height: -moz-fit-content !important;
@@ -1542,6 +1553,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 
 .flex-wrap {
   flex-wrap: wrap !important;
+}
+
+.justify-end {
+  justify-content: flex-end !important;
 }
 
 .grow {
@@ -1971,8 +1986,8 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
     top: 0px !important;
   }
 
-  .laptop\:-bottom-\[90\%\] {
-    bottom: -90% !important;
+  .laptop\:-bottom-\[140\%\] {
+    bottom: -140% !important;
   }
 
   .laptop\:col-span-2 {
@@ -2035,6 +2050,10 @@ body > main > div.products.flex.inspi_card__colors > div > div.swiper-pagination
 
   .laptop\:mt-48 {
     margin-top: 12rem !important;
+  }
+
+  .laptop\:mt-72 {
+    margin-top: 18rem !important;
   }
 
   .laptop\:mt-10 {
